create a basic workflow for a chain of thoughts prompt to get the response from the llm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,13 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.5",
+    "langgraph>=0.4.7",
+    "python-dotenv>=1.1.0",
+    "uvicorn>=0.34.2",
 ]
+
+[tool.ruff]
+line-length = 220
+
+[tool.ruff.lint]
+extend-select = ["E", "F"]
