setup postgres docker, alembic migrations, sqlalchemy and psycorg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.1",
     "fastapi[standard]>=0.115.12",
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.5",
     "langgraph>=0.4.7",
+    "psycopg2>=2.9.10",
     "python-dotenv>=1.1.0",
+    "sqlalchemy~=2.0",
     "uvicorn>=0.34.2",
 ]
 
