--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.5",
     "langgraph>=0.4.7",
+    "pgvector>=0.4.1",
     "psycopg2>=2.9.10",
     "python-dotenv>=1.1.0",
     "sqlalchemy~=2.0",
