package project under single folder and add github actions for CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "uvicorn>=0.34.2",
 ]
 
+[tool.setuptools.packages.find]
+where = ["."]              
+include = ["app*"]
+
 [tool.ruff]
 line-length = 220
 
