--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.1",
+    "behave[develop,toml]>=1.2.6",
     "fastapi[standard]>=0.115.12",
     "langchain>=0.3.25",
     "langchain-google-genai>=2.1.5",
