--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,19 +11,38 @@ on:
         
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install UV
+        run: pip install uv
+
+      - name: Install project dependencies
+        run: uv pip install --system .
+
+      - name: Install Ruff
+        run: uv pip install --system ruff
+
+      - name: Lint with Ruff
+        run: ruff check .
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
     environment:
-      name: dev
+      name: test
     env:
-      # These will be available to all steps!
       POSTGRES_USER: ${{ vars.POSTGRES_USER }}
       POSTGRES_DB: ${{ vars.POSTGRES_DB }}
-      POSTGRES_HOST: ${{ vars.POSTGRES_HOST }}
-      POSTGRES_PORT: ${{ vars.POSTGRES_PORT }}
-      # Secrets
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
     steps:
       - name: Checkout code
@@ -33,10 +52,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-      
-      - name: Debug environment
-        run: | 
-          env | grep POSTGRES
 
       - name: Install UV
         run: pip install uv
@@ -58,12 +73,6 @@ jobs:
       - name: Install project dependencies
         run: uv pip install --system .
 
-      - name: Install Ruff
-        run: uv pip install --system ruff
-
-      - name: Lint with Ruff
-        run: ruff check .
-
       - name: Run Alembic migrations
         run: alembic upgrade head
 
@@ -73,20 +82,34 @@ jobs:
       - name: Start FastAPI (background) & health check
         run: |
           nohup uvicorn app.main:app --host 127.0.0.1 --port 8000 &
-          sleep 5
-          curl -f http://127.0.0.1:8000/docs || exit 1
+          for i in {1..5}; do
+            echo "Health check attempt $i/5..."
+            if curl -f http://127.0.0.1:8000/docs; then
+              echo "FastAPI is healthy!"
+              exit 0
+            fi
+            sleep 3
+          done
+          echo "FastAPI failed to start after 5 attempts"
+          exit 1
 
   deploy:
     name: Deploy to ECR
     runs-on: ubuntu-latest
-    needs: build-test
+    needs: [build, test]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    environment:
+      name: dev
     permissions:
       id-token: write
       contents: read
     env:
       AWS_REGION: us-east-1
       ECR_REPOSITORY: innomightlabs-api
+      TF_VAR_postgres_user: ${{ vars.POSTGRES_USER }}
+      TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
+      TF_VAR_postgres_db: ${{ vars.POSTGRES_DB }}
+      TF_VAR_google_api_key: ${{ secrets.GOOGLE_API_KEY }}
 
     steps:
     - name: Checkout
@@ -111,3 +134,36 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: "1.5.0"
+
+    - name: Deploy Infrastructure
+      working-directory: infra
+      run: |
+        terraform init
+        terraform refresh
+        terraform plan -out=tfplan
+        terraform apply -auto-approve tfplan
+
+    - name: Get API Gateway URL
+      id: get-api-url
+      working-directory: infra
+      run: |
+        API_URL=$(terraform output -raw api_gateway_url)
+        echo "api_url=$API_URL" >> $GITHUB_OUTPUT
+
+    - name: Check Lambda Function Status
+      run: |
+        aws lambda get-function --function-name innomightlabs-api-lambda
+        aws logs describe-log-groups --log-group-name-prefix "/aws/lambda/innomightlabs-api-lambda"
+        echo "Recent Lambda logs:"
+        aws logs describe-log-streams --log-group-name "/aws/lambda/innomightlabs-api-lambda" --order-by LastEventTime --descending --max-items 1 | jq -r '.logStreams[0].logStreamName' | xargs -I {} aws logs get-log-events --log-group-name "/aws/lambda/innomightlabs-api-lambda" --log-stream-name {} --limit 10 || echo "No logs available yet"
+
+    - name: Run Database Migrations
+      run: |
+        curl -X POST "${{ steps.get-api-url.outputs.api_url }}/migrate" \
+          -H "Content-Type: application/json" \
+          -d '{}' || echo "Migration endpoint not available, skipping..."
