--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.1",
     "anthropic>=0.54.0",
-    "behave[develop,toml]>=1.2.6",
+    "boto3>=1.35.0",
     "fastapi[standard]>=0.115.12",
     "langchain>=0.3.25",
     "langchain-anthropic>=0.3.15",
@@ -15,6 +15,8 @@ dependencies = [
     "langchain-community>=0.3.26",
     "langchain-google-genai>=2.1.5",
     "langgraph>=0.4.7",
+    "loguru>=0.7.3",
+    "mangum>=0.19.0",
     "pgvector>=0.4.1",
     "psycopg2>=2.9.10",
     "pytest>=8.4.0",
