--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "sqlalchemy~=2.0",
     "uvicorn>=0.34.2",
+    "wikipedia>=1.4.0",
 ]
 
 [tool.setuptools.packages.find]
