--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp>=3.12.13",
     "alembic>=1.16.1",
     "anthropic>=0.54.0",
+    "beautifulsoup4>=4.13.4",
     "boto3>=1.35.0",
     "fastapi[standard]>=0.115.12",
     "langchain>=0.3.25",
