--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,13 @@ dependencies = [
     "mangum>=0.19.0",
     "pdfminer-six>=20250506",
     "pgvector>=0.4.1",
+    "playwright>=1.54.0",
     "psycopg2>=2.9.10",
     "pytest>=8.4.0",
     "pytest-asyncio>=1.0.0",
     "python-dotenv>=1.1.0",
     "sqlalchemy~=2.0",
-    "strands-agents-tools>=0.2.0",
+    "strands-agents-tools[local-chromium-browser]>=0.2.0",
     "uvicorn>=0.34.2",
     "wikipedia>=1.4.0",
 ]
