--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "langgraph>=0.4.7",
     "loguru>=0.7.3",
     "mangum>=0.19.0",
+    "mcp>=1.12.4",
     "pdfminer-six>=20250506",
     "pgvector>=0.4.1",
     "playwright>=1.54.0",
